// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapRewardsToRadioButtonItems maps rewards to radio button items 1`] = `
[
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "customReferralCode",
          "requiredPoints": 100,
        }
      }
    />,
    "value": "customReferralCode",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "noPeachFees",
          "requiredPoints": 200,
        }
      }
    />,
    "value": "noPeachFees",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "sats",
          "requiredPoints": 300,
        }
      }
    />,
    "value": "sats",
  },
]
`;

exports[`mapRewardsToRadioButtonItems maps rewards to radio button items 2`] = `
[
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "customReferralCode",
          "requiredPoints": 100,
        }
      }
    />,
    "value": "customReferralCode",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "noPeachFees",
          "requiredPoints": 200,
        }
      }
    />,
    "value": "noPeachFees",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "sats",
          "requiredPoints": 300,
        }
      }
    />,
    "value": "sats",
  },
]
`;

exports[`mapRewardsToRadioButtonItems maps rewards to radio button items 3`] = `
[
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "customReferralCode",
          "requiredPoints": 100,
        }
      }
    />,
    "value": "customReferralCode",
  },
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "noPeachFees",
          "requiredPoints": 200,
        }
      }
    />,
    "value": "noPeachFees",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "sats",
          "requiredPoints": 300,
        }
      }
    />,
    "value": "sats",
  },
]
`;

exports[`mapRewardsToRadioButtonItems maps rewards to radio button items 4`] = `
[
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "customReferralCode",
          "requiredPoints": 100,
        }
      }
    />,
    "value": "customReferralCode",
  },
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "noPeachFees",
          "requiredPoints": 200,
        }
      }
    />,
    "value": "noPeachFees",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "sats",
          "requiredPoints": 300,
        }
      }
    />,
    "value": "sats",
  },
]
`;

exports[`mapRewardsToRadioButtonItems maps rewards to radio button items 5`] = `
[
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "customReferralCode",
          "requiredPoints": 100,
        }
      }
    />,
    "value": "customReferralCode",
  },
  {
    "disabled": false,
    "display": <RewardItem
      reward={
        {
          "id": "noPeachFees",
          "requiredPoints": 200,
        }
      }
    />,
    "value": "noPeachFees",
  },
  {
    "disabled": true,
    "display": <RewardItem
      reward={
        {
          "id": "sats",
          "requiredPoints": 300,
        }
      }
    />,
    "value": "sats",
  },
]
`;
